fixed project img overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -678,6 +678,7 @@ div.skills {
     max-width: 650px;
     margin-bottom: 30px;
     display: block;
+    width: 100%;
 }
 
 .healthviz .project-page img {
